Lade till fler sidor.

--- a/logbook.tex
+++ b/logbook.tex
@@ -1,31 +1,106 @@
 \begin{landscape}
 \section{Logbook}
-\begin{longtable}{|c|c|c|c|c|c|c|c|c|c|c|c|}
-\hline
-Datum & \multicolumn{2}{|c|}{Tid UTC} & Frekvens & Mode    & Effekt & Motstation & \multicolumn{2}{|c|}{Rapport} & Anteckningar / QSL mm \\
-      & Start                         & Slut     & MHz/kHz &        & dBm/W      & Anrop                         & Sänt & Mott. &        \\ \hline \endhead
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
-      &                               &          &         &        &            &                               &      &       &        \\ \hline
+\begin{longtable}{|c|c|c|c|c|c|c|c|c|c|}
+	\hline
+	Station  & Datum  & \multicolumn{2}{|c|}{Tid UTC} & Frekvens & Mode & Effekt & \multicolumn{2}{|c|}{Rapport} & Noteringar / QSL mm \\
+	 Signal  & YYMMDD & HHMM &          HHMM          & MHz/kHz  &      & dBm/W  & RX &            TX            &  \\ \hline
+	\endhead &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
 \end{longtable}
 \end{landscape}
 \clearpage
