Lade till ytterligare varianter med enbart HF för de som vill ha det.

--- a/body.tex
+++ b/body.tex
@@ -1,8 +1,7 @@
 \section{Signaler och anrop}
 \subsection{Svenska signaler}
 
-Svenska signaler förekommer inom ett antal prefix. Enligt ITU disponerar Sverige förljande signalserier:
-7SA--7SZ samt 8SA--8SZ och vidare de mer kända SAA--SMZ. Dessa har används till varierande ändamål, exempelvis har flyget signaler i serien SE-AAA--ZZZ. Polisen har tidigare använt signaler i serien SHA plus fyra siffror, detta är nu ersatt med nytt system i.o.m. RAKEL. Räddningstjänsten använde SDA med fyra siffror. Signaler som 7SA + 4 siffror används för mindre yrkesbåtar SC + 4 siffror för fritidsbåtar.
+Svenska signaler förekommer inom ett antal prefix. Enligt ITU disponerar Sverige förljande signalserier: 7SA--7SZ samt 8SA--8SZ och vidare de mer kända SAA--SMZ. Dessa har används till varierande ändamål, exempelvis har flyget signaler i serien SE-AAA--ZZZ. Polisen har tidigare använt signaler i serien SHA plus fyra siffror, detta är nu ersatt med nytt system i.o.m. RAKEL. Räddningstjänsten använde SDA med fyra siffror. Signaler som 7SA + 4 siffror används för mindre yrkesbåtar SC + 4 siffror för fritidsbåtar.
 
 Amatörradion använder ett antal signaler, de viktigaste är:
 
@@ -35,44 +34,44 @@ Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler u
 
 \begin{center}
 \begin{longtable}{cl|cl}
-	   \textbf{Signal}    & \textbf{Land}        & \textbf{Signal} & \textbf{Land}         \\ \hline
+	   \textbf{Signal} & \textbf{Land}        & \textbf{Signal} & \textbf{Land}         \\ \hline
 	\endhead
-	   AMA--AOZ & Spanien              &    C3A--C3Z     & Andorra               \\
-	      C4A--C4Z        & Cypern               &    DAA--DRZ     & Tyskland              \\
-	      EAA--EHZ        & Spanien              &    EIA--EJZ     & Irland                \\
-	      EKA--EKZ        & Armenien             &    EMA--EOZ     & Ukraina               \\
-	      EBA--ERZ        & Moldav.              &    ESA--ESZ     & Estland               \\
-	      EUA--EWZ        & Vitryssland          &    EXA--EXZ     & Ryssland              \\
-	      EYA--EYZ        & Tajikistan           &    EZA--EZZ     & Turkmenistan          \\
-	      FAA--FZZ        & Frankrike            &    GAA--GZZ     & Storbrittannien       \\
-	      HAA--HZZ        & Ungern               &    HBA--HBZ     & Schweiz               \\
-	      HEA--HEZ        & Schweiz              &    HFA--HFZ     & Polen                 \\
-	      HGA--HGZ        & Ungern               &    HVA--HVZ     & Vatikanen             \\
-	      HWA--HYZ        & Frankrike            &    H2A--H2Z     & Cypern                \\
-	      IAA--IZZ        & Italien              &    JWA--JXZ     & Norge                 \\
-	      J4A--J4Z        & Grekland             &    LAA--LNZ     & Norge                 \\
-	      LXA--LXZ        & Luxemburg            &    LYA--LYZ     & Litauen               \\
-	      LZA--LZZ        & Bulgarien            &    MAA--MZZ     & Storbrittannien       \\
-	      OEA--OEZ        & Österrike            &    OFA--OJZ     & Finland               \\
-	      OKA--OLZ        & Tjeckiska republiken &    OMA--OMZ     & Slovakiska republiken \\
-	      ONA--OTZ        & Belgien              &    OUA--OZZ     & Danmark               \\
-	      PAA--PIZ        & Nederländerna        &    P3A--P3Z     & Cypern                \\
-	      RAA--RZZ        & Ryska federationen   &    SAA--SMZ     & Sverige               \\
-	      SNA--SRZ        & Polen                &    TAA--TCZ     & Turkiet               \\
-	      TFA--TFZ        & Island               &    THA--THZ     & Frankrike             \\
-	      TKA--TKZ        & Frankrikte           &    TMA--TMZ     & Frankrike             \\
-	      TOA--TQZ        & Frankrike            &    TVA--TXZ     & Frankrike             \\
-	      T9A--T9Z        & Bosnien-Herzegovina  &    UAA--UIZ     & Ryska federationen    \\
-	      UJA--UMZ        & Uzbekistan           &    UNA--UQZ     & Kazakstan             \\
-	       URA-UTZ        & Ukraina              &    UUA--UZZ     & Ukraina               \\
-	      VPA--VSZ        & Storbritannien       &    XPA--XPZ     & Danmark               \\
-	      XXA--XXZ        & Portugal             &    YLA--YLZ     & Litauen               \\
-	      Y2A--Y9Z        & Tyskland             &    ZBA--ZJZ     & Storbritannien        \\
-	      ZNA--ZOZ        & Storbritannien       &    ZQA--ZQZ     & Storbritannien        \\
-	       2AA-2ZZ        & Storbritannien       &    3YA--3YZ     & Norge                 \\
-	      3ZA--3ZZ        & Polen                &    5BA--5BZ     & Cypern                \\
-	      5PA--5QZ        & Danmark              &    7SA--7SZ     & Sverige               \\
-	      8SA--8SZ        & Sverige              &    9AA--9AZ     & Kroatien
+              AMA--AOZ     & Spanien              & C3A--C3Z        & Andorra               \\
+	      C4A--C4Z     & Cypern               & DAA--DRZ        & Tyskland              \\
+	      EAA--EHZ     & Spanien              & EIA--EJZ        & Irland                \\
+	      EKA--EKZ     & Armenien             & EMA--EOZ        & Ukraina               \\
+	      EBA--ERZ     & Moldav.              & ESA--ESZ        & Estland               \\
+	      EUA--EWZ     & Vitryssland          & EXA--EXZ        & Ryssland              \\
+	      EYA--EYZ     & Tajikistan           & EZA--EZZ        & Turkmenistan          \\
+	      FAA--FZZ     & Frankrike            & GAA--GZZ        & Storbrittannien       \\
+	      HAA--HZZ     & Ungern               & HBA--HBZ        & Schweiz               \\
+	      HEA--HEZ     & Schweiz              & HFA--HFZ        & Polen                 \\
+	      HGA--HGZ     & Ungern               & HVA--HVZ        & Vatikanen             \\
+	      HWA--HYZ     & Frankrike            & H2A--H2Z        & Cypern                \\
+	      IAA--IZZ     & Italien              & JWA--JXZ        & Norge                 \\
+	      J4A--J4Z     & Grekland             & LAA--LNZ        & Norge                 \\
+	      LXA--LXZ     & Luxemburg            & LYA--LYZ        & Litauen               \\
+	      LZA--LZZ     & Bulgarien            & MAA--MZZ        & Storbrittannien       \\
+	      OEA--OEZ     & Österrike            & OFA--OJZ        & Finland               \\
+	      OKA--OLZ     & Tjeckiska republiken & OMA--OMZ        & Slovakiska republiken \\
+	      ONA--OTZ     & Belgien              & OUA--OZZ        & Danmark               \\
+	      PAA--PIZ     & Nederländerna        & P3A--P3Z        & Cypern                \\
+	      RAA--RZZ     & Ryska federationen   & SAA--SMZ        & Sverige               \\
+	      SNA--SRZ     & Polen                & TAA--TCZ        & Turkiet               \\
+	      TFA--TFZ     & Island               & THA--THZ        & Frankrike             \\
+	      TKA--TKZ     & Frankrikte           & TMA--TMZ        & Frankrike             \\
+	      TOA--TQZ     & Frankrike            & TVA--TXZ        & Frankrike             \\
+	      T9A--T9Z     & Bosnien-Herzegovina  & UAA--UIZ        & Ryska federationen    \\
+	      UJA--UMZ     & Uzbekistan           & UNA--UQZ        & Kazakstan             \\
+	       URA-UTZ     & Ukraina              & UUA--UZZ        & Ukraina               \\
+	      VPA--VSZ     & Storbritannien       & XPA--XPZ        & Danmark               \\
+	      XXA--XXZ     & Portugal             & YLA--YLZ        & Litauen               \\
+	      Y2A--Y9Z     & Tyskland             & ZBA--ZJZ        & Storbritannien        \\
+	      ZNA--ZOZ     & Storbritannien       & ZQA--ZQZ        & Storbritannien        \\
+	       2AA-2ZZ     & Storbritannien       & 3YA--3YZ        & Norge                 \\
+	      3ZA--3ZZ     & Polen                & 5BA--5BZ        & Cypern                \\
+	      5PA--5QZ     & Danmark              & 7SA--7SZ        & Sverige               \\
+	      8SA--8SZ     & Sverige              & 9AA--9AZ        & Kroatien
 \end{longtable}
 \end{center}
 
@@ -94,9 +93,9 @@ Sverige delas in i följande distrikt efter sina län:
 	      8        & Speciella stationer utanför landets gränser
 \end{tabular}
 \end{center}
+Distrikten förekommen som siffra i utdelade anropssignaler. Radioamatörer byter inte distriktsiffra under resa i annat distrikt, i stället används suffix (tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger man "SM0UEI mobilt i SM3-land" för att påvisa att man befinner sig utanför ordinarie distrikt.
 
-Distrikten förekommen som siffra i utdelade anropssignaler. Radioamatörer byter inte distriktsiffra under resa i annat distrikt, i stället används prefix som t.ex. /M för mobil. Ofta uppger man "SM0UEI mobilt i SM3-land" för att påvisa att man befinner sig utanför ordinarie distrikt.
-
+I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast en gång, det kunde alltså inte finnas en SM4UEI och en SM0UEI, det vore i så fall samma amatör som flyttat. Med det nya systemet där SSA m.fl. utdelar signaler i stället för PTS i serien SAnXYZ kan SA4XYZ och SA7XYZ alltså vara två helt olika amatörer.
 \section{Terminologi och trafik}
 
 \subsection{Bokstaveringsalfabetet (Svenska)}
