--- a/rhb-pad-hf.tex
+++ b/rhb-pad-hf.tex
@@ -16,12 +16,9 @@
 %\usepackage{avant}
 \raggedbottom
 
-\input{init-full}
+\input{init-hf}
 \input{body}
 \input{body-hf}
-\input{body-vhf}
-\input{qso}
-\input{logbook}
 
 \end{document}
 
