--- a/rhb-print-hf.tex
+++ b/rhb-print-hf.tex
@@ -1,27 +1,19 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = sv_SE
-\documentclass[10pt,swedish,a4paper]{article}
+\documentclass[10pt,swedish,a5paper,twoside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[swedish]{babel}
 \usepackage[hidelinks]{hyperref}
 \usepackage[a5paper,textwidth=12cm,
-	textheight=17cm,bindingoffset=0pt]{geometry}
+	textheight=17cm,bindingoffset=1cm]{geometry}
 \usepackage{amsmath}
 \usepackage{pdflscape}
 \usepackage{longtable}
 \usepackage{textcomp}
-\renewcommand{\familydefault}{\sfdefault}
-\usepackage{helvet} 
-\usepackage[helvet]{sfmath}
-%\usepackage{avant}
 \raggedbottom
 
-\input{init-full}
+\input{init-hf}
 \input{body}
 \input{body-hf}
-\input{body-vhf}
-\input{qso}
-\input{logbook}
 
 \end{document}
-
