Redigerade in regler för uppträdande mm.

--- a/qso.tex
+++ b/qso.tex
@@ -1,22 +1,24 @@
-\section{QSO}
+\subsection{QSO}
 
 Konsten att genomföra ett radiosamtal (QSO) i olika sammanhang.
 
-\subsection{Radiosamtalets delar}
+\subsubsection{Radiosamtalets delar}
 
 Ett radiosamtal består som regel av tre delar. Först sker ett anrop, när kontakt etablerats utväxlas ett antal meddelande (dialog) och när man är klarar avslutas samtalet. Dessa tre delar är ganska standard. Man följer detta ganska strikt t.ex. på kortvågen där telefoni oftast innebär SSB. Anledningen är enkel, det går inte höra när någon släpper sändtangenten eller bara är tyst och tänker.
 
 När man kör FM över repeatrar på VHF/UHF är det inte lika vanligt att man både öppnar och avslutar varje sändning med motparten och sin egen signal. Men man skall regelbundet upprepa signalerna och i praktiken är det lämpligt att göra kanske var femte minut eller oftare.
 
-\subsection{Anropet}
+\subsubsection{Anropet}
 
 Ett anrop kan se ut ungefär såhär:
 
---- SM0MAD från SM0UEI, SM0MAD kom!
+--- SA0MAD från SM0UEI, SA0MAD kom!
 
-Här är det SM0MAD som anropas av SM0UEI. Svaret kan se ut ungefär såhär:
+Här är det SA0MAD som anropas av SM0UEI. 
 
---- SM0UEI från SM0MAD kom!
+Svaret kan se ut ungefär såhär:
+
+--- SM0UEI från SA0MAD kom!
 
 Därefter övergår radiosamtalet i dialog eller meddelandesändning.
 
@@ -30,21 +32,21 @@ Eller på engelska:
 
 --- CQ CQ CQ this is SM0UEI calling CQ CQ CQ and standing by.
 
-\subsection{Meddelandesändning}
+\subsubsection{Meddelandesändning}
 
---- SM0MAD från SM0UEI, tack för svaret. Din signal är 59 hos mig, mitt QTH är JO89WA och namnet är Anders. SM0MAD från SM0UEI kom.
+--- SA0MAD från SM0UEI, tack för svaret. Din signal är 59 hos mig, mitt QTH är JO89WA och namnet är Anders. SA0MAD från SM0UEI kom.
 
---- SM0UEI från SM0MAD, tack för rapporten. Din signal är 57 hos mig, jag befinner mi i JO89VK men kommer under kvällen byta QTH. Jag kommer då vara QRV på 3663 kHz. QSL? SM0UEI från SM0MAD.
+--- SM0UEI från SA0MAD, tack för rapporten. Din signal är 57 hos mig, jag befinner mi i JO89VK men kommer under kvällen byta QTH. Jag kommer då vara QRV på 3663 kHz. QSL? SM0UEI från SA0MAD.
 
---- SM0MAD från SM0UEI, QSL på det, QRX 19.30 på frekvens 3663 kHz. 
+--- SA0MAD från SM0UEI, QSL på det, QRX 19.30 på frekvens 3663 kHz. 
 
-\subsection{Avslutning}
+\subsubsection{Avslutning}
 
---- SM0MAD från SM0UEI, tack för rapport och vi hörs senare, 73, slut kom
+--- SA0MAD från SM0UEI, tack för rapport och vi hörs senare, 73, slut kom
 
---- SM0UEI från SM0MAD, 73 tillbaka, klart slut.
+--- SM0UEI från SA0MAD, 73 tillbaka, klart slut.
 
-\section{Contest}
+\subsection{Contest}
 
 Under contest är det vanligtvis så att man kör ett relativt kort QSO för att hinna så många som möjligt. Under constestförhållanden utväxlar man som regel signal, sekvensnummer, signalrapport med varandra. Ofta lägger man till "contest" i sitt anrop exempelvis:
 
@@ -52,14 +54,30 @@ Under contest är det vanligtvis så att man kör ett relativt kort QSO för att
 
 Efter man etablerat kontakt utväxlar man signalrapporter och sekvensnummer
 
---- SM0UEI from SA0MAD, you are 59 here and sequence 28, SM0UEI from SM0MAD.
+--- SM0UEI from SA0MAD, you are 59 here and sequence 28, SM0UEI from SA0MAD.
 
 --- SA0MAD from SM0UEI, QSL your signals are 58 and my sequence is 112, QSL? SA0MAD from SM0UEI
 
 --- QSL and good luck, SM0UEI from SA0MAD
 
-\subsection{Pile-up}
+\subsubsection{Pile-up}
 
-Ibland kan det bli väldigt många motstationer samtidigt som ropar. Nu gäller det att spetsa öronen! Först gäller det att sålla. Rara signaler från långtbortistan ger mer poäng i en contest som regel eller från länder du inte kört osv beroende på regler. Försök att sålla med "du som sänter från Florida" eller "VK7 kom igen" osv till det är en station kvar. Kör den snabbt, ropa CQ igen och börja sålla.
+Ibland kan det bli väldigt många motstationer samtidigt som ropar. Nu gäller det att spetsa öronen! Först gäller det att sålla. Rara signaler från långtbortistan ger mer poäng i en contest som regel eller från länder du inte kört osv beroende på regler. Försök att sålla med "du som sänder från Florida" eller "VK7 kom igen" osv till det är en station kvar. Kör den snabbt, ropa CQ igen och börja sålla.
 
-Om du försöker nå en motstation med pile-up var uppmärksam på dennes sändningar och vänta på din tur. Tala gärna om signal och var du sänder från men släpp sedan fram andra. 
+Direkt när det uppstår en pile-up är det effektivt att köra split. Dvs du lyssnar 5-10 kHz upp eller ned från den frekvens du sänder på. Det gör det lättare för dig att behålla kommandot under pile-up. Ligger du och sänder i ett frekvensområde som är särskilt ägnat för DX är det smart att lägga Rx-frekvensen strax utanför. Det undviker att man stökar ned i DX-bandet.
+
+Kör du split skall du säga det efter varje sändning. "CQ CQ CQ de Sierra Mike Zeor Uniform Echo India listening 5 up" exempelvis. På CW bör en split vara minst 2 kHz och på SSB bör den vara minst 5 kHz ännu hellre 10 kHz. Tänk på att när du startar din split måste du kolla så att båda frekvenserna är ok. Låt inte din pile-up sprida ut sig för mycket även om det är kanske enklare för dig så är risken stor att den stör någon annan. 
+
+Kör korta QSO. Utbyt snabbt den information som behövs och ta sedan nästa. Ha förståelse för att det kan bli krockar i en pile-up. När du hör en partiell signal eller station du vill prata med håll fast vid den. Om du har svårt att läsa den be den repetera tills ni är klara. Genom att du är auktoriteten på frekvensen kommer pile-up:en att lugna ned sig och vänta på sin tur. Om du ''hattar omkring'' är risken att all radiodisciplin far ut genom fönstret.
+
+Använd ett standardmönster när du kör:
+
+--- SM0UEI CQ CQ CQ de SM0UEI 10 UP
+
+--- SM0UEI de ON3XYZ you are 59 sequence 122, QSL?
+
+--- ON3XYZ SM0UEI QSL, 59 back to you, sequence 312 QSL?
+
+--- QSL. CQ CQ CQ de SM0UEI 10 UP ...
+
+Om du försöker nå en motstation med pile-up var uppmärksam på dennes sändningar och vänta på din tur. Tala gärna om signal och var du sänder från men släpp sedan fram andra. Tänk på hur du själv skulle vilja att en pile-up på din egen station skulle vilja agera. Den gyllene regeln är också alltid lyssna först --- sänd sedan!
