--- a/bandplan-hf.tex
+++ b/bandplan-hf.tex
@@ -21,7 +21,9 @@ Alla frekvenser i kHz, bandbredder i Hz.
 1 810 & 1 838 & 200  & CW         & Exklusivt för CW. Interkontinental trafik har prio. \\ \hline
 1 838 & 1 840 & 500  & Smalband   & Ej packet på 160m, PSK 1 838,150                    \\ \hline
 1 840 & 1 850 & 2700 & Alla moder & Även digimode. SSB QRP 1 843 kHz                    \\ \hline
-1 850 & 2 000 & 2700 & Alla moder & OBS! Högst 10 W till antennen i detta segment       \\ \hline
+1 850 & 1 900 & 2700 & Alla moder & OBS! Max 10 W till ant.                             \\ \hline
+1 900 & 1 950 & 2700 & Alla moder & OBS! Max 100 W till ant.                            \\ \hline
+1 950 & 2 000 & 2700 & Alla moder & OBS! Max 10 W till ant.                             \\ \hline
 \end{tabular}
 
 \subsubsection{Bandplan 80 m, 3500--3800 kHz}
