Uppdateringar JOTA HF

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -27,6 +27,34 @@ OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast samma
 \item Var särskilt uppmärksam på satelliters nerlänksfrekvenser på 10 m-bandet. I detta segment skall endast lyssning ske. Ingen sändning är tillåten här eller i skyddssegmentet strax ovanför satellitsegmentet. Tänk på att satelliters frekvens kan dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
 \end{itemize}
 
+\section{Frekvenser HF}
+
+\subsection{JOTA---Jamboree on the air, scoutfrekvenser}
+
+Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särskilda tillfällen ofta i tillsammans med en lokal amatörradioklubb eller vanliga amtörradioeldsjälar som inte sällan också är scouter. Här kommer en lista på frekvenser som är vanligt förekommande i scoutsammanhang.
+
+\begin{tabular}{rrll}
+	Band & Frekvens & Trafikslag & Kommentar   \\ \hline
+	  80 &    3 570 & CW         &  \\
+	  80 &    3 940 & SSB        & Ej region 2 \\
+	  80 &    3 690 & SSB        &  \\
+	  40 &    7 030 & CW         &  \\
+	  40 &    7 190 & SSB        &  \\
+	  40 &    7 090 & SSB        &  \\
+	  20 &   14 060 & CW         &  \\
+	  20 &   14 290 & SSB        &  \\
+	  17 &   18 080 & CW         &  \\
+	  17 &   18 140 & SSB        &  \\
+	  15 &   21 140 & CW         &  \\
+	  15 &   21 360 & SSB        &  \\
+	  12 &   24 910 & CW         &  \\
+	  12 &   24 960 & SSB        &  \\
+	  10 &   28 180 & CW         &  \\
+	  10 &   28 390 & SSB        &  \\
+	   6 &   10 160 & CW         &  \\
+	   6 &   50 160 & SSB        &
+\end{tabular}
+
 \subsection{Fyrar}
 
 \subsubsection{IBP---International Beacon Project}
