Uppdateringar för JOTA

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -34,37 +34,43 @@ OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast samma
 Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särskilda tillfällen ofta i tillsammans med en lokal amatörradioklubb eller vanliga amtörradioeldsjälar som inte sällan också är scouter. Här kommer en lista på frekvenser som är vanligt förekommande i scoutsammanhang.
 
 \begin{tabular}{rrll}
-	Band & Frekvens & Trafikslag & Kommentar   \\ \hline
-	  80 &    3 570 & CW         &  \\
-	  80 &    3 940 & SSB        & Ej region 2 \\
-	  80 &    3 690 & SSB        &  \\
-	  40 &    7 030 & CW         &  \\
-	  40 &    7 190 & SSB        &  \\
-	  40 &    7 090 & SSB        &  \\
-	  20 &   14 060 & CW         &  \\
-	  20 &   14 290 & SSB        &  \\
-	  17 &   18 080 & CW         &  \\
-	  17 &   18 140 & SSB        &  \\
-	  15 &   21 140 & CW         &  \\
-	  15 &   21 360 & SSB        &  \\
-	  12 &   24 910 & CW         &  \\
-	  12 &   24 960 & SSB        &  \\
-	  10 &   28 180 & CW         &  \\
-	  10 &   28 390 & SSB        &  \\
-	   6 &   10 160 & CW         &  \\
-	   6 &   50 160 & SSB        &
+	\textbf{Band} & \textbf{Frekvens} & \textbf{Trafik} & \textbf{Not} \\ \hline
+	           80 &             3 570 & CW              &  \\
+	              &             3 940 & SSB             & Ej region 2  \\
+	              &             3 690 & SSB             &  \\ \hline
+	           40 &             7 030 & CW              &  \\
+	              &             7 190 & SSB             &  \\
+	              &             7 090 & SSB             &  \\ \hline
+	           20 &            14 060 & CW              &  \\
+	              &            14 290 & SSB             &  \\ \hline
+	           17 &            18 080 & CW              &  \\
+	              &            18 140 & SSB             &  \\ \hline
+	           15 &            21 140 & CW              &  \\
+	              &            21 360 & SSB             &  \\ \hline
+	           12 &            24 910 & CW              &  \\
+	              &            24 960 & SSB             &  \\ \hline
+	           10 &            28 180 & CW              &  \\
+	              &            28 390 & SSB             &  \\ \hline
+	            6 &            10 160 & CW              &  \\
+	              &            50 160 & SSB             &  \\ \hline
 \end{tabular}
+
+
+
+Normalt aktiveras dessa frekvenser tredje veckoslutet i oktober varje år, fredag till söndag. Då kan det vara många klubbar som finns på frekvenserna och det är också vanligt att man hör dem på helt andra frekvenser. De frekvenser som listas här är inte på något vis de endra frekvenser som scouter använder.
 
 \subsection{Fyrar}
 
 \subsubsection{IBP---International Beacon Project}
 
-Det finns flera olika typer av fyrar men för HF är IBP (International Beacon Project) intressant eftersom det ger operatören möjlighet att utröna hur utbredningen ser ut för stunden genom att lyssna efter fyrar. Tabellen nedan visar anropssignaler och första sändningsslotten som fyren sänder, dvs SCHED för olika fyrar och frekvenser.
+Det finns flera olika typer av fyrar men för HF är IBP (International Beacon Project) intressant eftersom det ger operatören möjlighet att utröna hur utbredningen ser ut för stunden genom att lyssna efter fyrar. 
 
 Fyrarna har gemensam hårdvara och synkroniseras mot tidsreferens. Fyrar kan vara offline av olika skäl, kontrollera mot IBP:s hemsida om du inte hör en fyr du brukar höra, den kan vara off line.
 
+Tabellen nedan visar anropssignaler och första sändningsslotten som fyren sänder, dvs SCHED för olika fyrar och frekvenser.
 
 \subsubsection{Lista över IBP-fyrar}
+\small
 \begin{tabular}{llrrrrr}
 \textbf{Signal} & \textbf{QTH} & \textbf{14 100} & \textbf{18 110} & \textbf{21 150} & \textbf{24 930} & \textbf{28 200} \\ \hline
 
@@ -88,10 +94,11 @@ OA4B   & Peru           & 02:40  & 02:50  & 00:00  & 00:10  & 00:20  \\
 YV5B   & Venezuela      & 02:50  & 00:00  & 00:10  & 00:20  & 00:30  \\
 \end{tabular}
 
+\normalsize
+
 \input{bandplan-hf}
 
 \begin{landscape}
-\small
 \subsection{PTS Bandplan för VLF, 3-30 kHz}
 \begin{longtable}{lll}
 \textbf{Frekvens} & \textbf{Användning}              & \textbf{Anmärkning}             \\ \hline \endhead
