Tog tillfälligt bort QSO-delen för omarbetning

--- a/qso.tex
+++ b/qso.tex
@@ -12,11 +12,11 @@ När man kör FM över repeatrar på VHF/UHF är det inte lika vanligt att man b
 
 Ett anrop kan se ut ungefär såhär:
 
---- SM0MAD från SM0UEI, SM0MAD kom!
+--- SM0MAD från SM0UEI, SA0MAD kom!
 
 Här är det SM0MAD som anropas av SM0UEI. Svaret kan se ut ungefär såhär:
 
---- SM0UEI från SM0MAD kom!
+--- SM0UEI från SA0MAD kom!
 
 Därefter övergår radiosamtalet i dialog eller meddelandesändning.
 
